--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
         - asset: assets/fonts/oswald.ttf
   assets:
     - assets/img1.png
+    - assets/user.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
